# customasm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: basic.asm  basic.txt
src/: build.rs  driver.rs  lib.rs  main.rs  usage_help.md
src/asm/: mod.rs
src/asm/decls/: bank.rs  bankdef.rs  function.rs  mod.rs  ruledef.rs  symbol.rs
src/asm/defs/: addr.rs  align.rs  bankdef.rs  data_block.rs  function.rs  instruction.rs  mod.rs  res.rs  ruledef.rs  ruledef_map.rs  symbol.rs
src/asm/matcher/: mod.rs
src/asm/output/: mod.rs
src/asm/parser/: directive.rs  directive_addr.rs  directive_align.rs  directive_assert.rs  directive_bank.rs  directive_bankdef.rs  directive_bits.rs  directive_const.rs  directive_data.rs  directive_fn.rs  directive_if.rs  directive_include.rs  directive_labelalign.rs  directive_noemit.rs  directive_once.rs  directive_res.rs  directive_ruledef.rs  fields.rs  instruction.rs  mod.rs  symbol.rs
src/asm/resolver/: addr.rs  align.rs  assert.rs  constant.rs  data_block.rs  directive_if.rs  eval.rs  (+7 more)
src/diagn/: mod.rs  report.rs  span.rs
src/expr/: builtin_fn.rs  eval.rs  expression.rs  inspect.rs  parser.rs
src/syntax/: excerpt.rs  mod.rs  token.rs  walker.rs
src/test/: examples.rs  excerpt.rs  expr.rs  file.rs  file_navigation.rs  mod.rs
src/util/: bigint.rs  bitvec.rs  bitvec_format.rs  char_counter.rs  file_navigation.rs  fileserver.rs  item_ref.rs  mod.rs  overlap_checker.rs  string_styler.rs  symbol_format.rs  symbol_manager.rs
src/webasm/: mod.rs
web/: customasm.wasm  index.html  main.js
(+1 files in other folders)
